--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@ h1 {
 
 }
 
+.mini {
+    color: rgb(245, 241, 31);
+
+}
+
+
+
 .tem-1 {
-    width: 500%;
+    width: 50%;
     padding-left: 5%;
     font-size: x-large;
 }
@@ -36,9 +43,16 @@ a {
     font-size: 25px;
     background-color: rgb(245, 138, 8);
     border-radius: 10px;
+    padding-left: 10px;
 }
 
 a:hover {
     background-color: rgb(19, 3, 16);
     transition: 2s;
+}
+
+
+.templeate1 {
+    display: flex;
+
 }
